--- a/src/style.scss
+++ b/src/style.scss
@@ -1,3 +1,11 @@
-body {
-    background: blue;
+*, *::before, *::after { position: relative; box-sizing: border-box; padding: 0; margin: 0; }
+body { 
+    max-width: 100%;
+    min-height: 100vh; 
+    background: linear-gradient(to right, #3f87a6, #ebf8e1); 
+    
+    line-height: 1.3; 
+    padding: 1.75rem; 
+    margin-left: auto;
+    margin-right: auto;
 }
